patients docs done
